Fix NoStop component box shadow not showing

--- a/src/Stop/NoStop.css
+++ b/src/Stop/NoStop.css
@@ -5,4 +5,6 @@
   width: 350px;
   box-shadow: 0 1px 3px #666;
   background-color: #EEE;
+  position: relative;
+  z-index: 2;
 }
